// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frozen Pi terminal read-tool visuals > dark at 40 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;40;40;50m                                        [49m[0m]8;;
[48;2;40;40;50m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                         [49m[0m]8;;
[48;2;40;40;50m                                        [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;60;40;40m                                        [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                         [49m[0m]8;;
[2K[48;2;60;40;40m                                        [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;128;128;128mNo such file[39m                           [49m[0m]8;;
[2K[48;2;60;40;40m                                        [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;40;50;40m                                        [49m[0m]8;;
[2K[48;2;40;50;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                         [49m[0m]8;;
[2K[48;2;40;50;40m                                        [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 40,
      "y": 5,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      " No such file                           ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 40,
      "y": 9,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      " No such file                           ",
      "                                        ",
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 40,
      "y": 3,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "width": 40,
}
`;

exports[`frozen Pi terminal read-tool visuals > dark at 80 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;40;40;50m                                                                                [49m[0m]8;;
[48;2;40;40;50m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                 [49m[0m]8;;
[48;2;40;40;50m                                                                                [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;60;40;40m                                                                                [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                 [49m[0m]8;;
[2K[48;2;60;40;40m                                                                                [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;128;128;128mNo such file[39m                                                                   [49m[0m]8;;
[2K[48;2;60;40;40m                                                                                [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;40;50;40m                                                                                [49m[0m]8;;
[2K[48;2;40;50;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                 [49m[0m]8;;
[2K[48;2;40;50;40m                                                                                [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 80,
      "y": 5,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      " No such file                                                                   ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 80,
      "y": 9,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      " No such file                                                                   ",
      "                                                                                ",
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 80,
      "y": 3,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "width": 80,
}
`;

exports[`frozen Pi terminal read-tool visuals > dark at 120 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;40;40;50m                                                                                                                        [49m[0m]8;;
[48;2;40;40;50m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                                                         [49m[0m]8;;
[48;2;40;40;50m                                                                                                                        [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;60;40;40m                                                                                                                        [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                                                         [49m[0m]8;;
[2K[48;2;60;40;40m                                                                                                                        [49m[0m]8;;
[2K[48;2;60;40;40m [38;2;128;128;128mNo such file[39m                                                                                                           [49m[0m]8;;
[2K[48;2;60;40;40m                                                                                                                        [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;40;50;40m                                                                                                                        [49m[0m]8;;
[2K[48;2;40;50;40m [38;2;212;212;212mread[39m [38;2;138;190;183mnotes.txt[39m                                                                                                         [49m[0m]8;;
[2K[48;2;40;50;40m                                                                                                                        [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 120,
      "y": 5,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      " No such file                                                                                                           ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 120,
      "y": 9,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      " No such file                                                                                                           ",
      "                                                                                                                        ",
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 120,
      "y": 3,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "width": 120,
}
`;

exports[`frozen Pi terminal read-tool visuals > light at 40 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;232;232;240m                                        [49m[0m]8;;
[48;2;232;232;240m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                         [49m[0m]8;;
[48;2;232;232;240m                                        [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;240;232;232m                                        [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                         [49m[0m]8;;
[2K[48;2;240;232;232m                                        [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;108;108;108mNo such file[39m                           [49m[0m]8;;
[2K[48;2;240;232;232m                                        [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;232;240;232m                                        [49m[0m]8;;
[2K[48;2;232;240;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                         [49m[0m]8;;
[2K[48;2;232;240;232m                                        [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 40,
      "y": 5,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      " No such file                           ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 40,
      "y": 9,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      " No such file                           ",
      "                                        ",
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 40,
      "y": 3,
    },
    "viewport": [
      "",
      "                                        ",
      " read notes.txt                         ",
      "                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "width": 40,
}
`;

exports[`frozen Pi terminal read-tool visuals > light at 80 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;232;232;240m                                                                                [49m[0m]8;;
[48;2;232;232;240m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                 [49m[0m]8;;
[48;2;232;232;240m                                                                                [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;240;232;232m                                                                                [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                 [49m[0m]8;;
[2K[48;2;240;232;232m                                                                                [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;108;108;108mNo such file[39m                                                                   [49m[0m]8;;
[2K[48;2;240;232;232m                                                                                [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;232;240;232m                                                                                [49m[0m]8;;
[2K[48;2;232;240;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                 [49m[0m]8;;
[2K[48;2;232;240;232m                                                                                [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 80,
      "y": 5,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      " No such file                                                                   ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 80,
      "y": 9,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      " No such file                                                                   ",
      "                                                                                ",
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 80,
      "y": 3,
    },
    "viewport": [
      "",
      "                                                                                ",
      " read notes.txt                                                                 ",
      "                                                                                ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "width": 80,
}
`;

exports[`frozen Pi terminal read-tool visuals > light at 120 columns 1`] = `
{
  "ansi": [
    "[?2026h[0m]8;;
[48;2;232;232;240m                                                                                                                        [49m[0m]8;;
[48;2;232;232;240m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                                                         [49m[0m]8;;
[48;2;232;232;240m                                                                                                                        [49m[0m]8;;[?2026l",
    "[?2026h[2A
[2K[48;2;240;232;232m                                                                                                                        [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                                                         [49m[0m]8;;
[2K[48;2;240;232;232m                                                                                                                        [49m[0m]8;;
[2K[48;2;240;232;232m [38;2;108;108;108mNo such file[39m                                                                                                           [49m[0m]8;;
[2K[48;2;240;232;232m                                                                                                                        [49m[0m]8;;[?2026l",
    "[?2026h
[2K[0m]8;;
[2K[48;2;232;240;232m                                                                                                                        [49m[0m]8;;
[2K[48;2;232;240;232m [38;2;31;35;40mread[39m [38;2;90;128;128mnotes.txt[39m                                                                                                         [49m[0m]8;;
[2K[48;2;232;240;232m                                                                                                                        [49m[0m]8;;[?2026l",
  ],
  "error": {
    "cursor": {
      "x": 120,
      "y": 5,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      " No such file                                                                                                           ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "recovery": {
    "cursor": {
      "x": 120,
      "y": 9,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      " No such file                                                                                                           ",
      "                                                                                                                        ",
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "request": {
    "cursor": {
      "x": 120,
      "y": 3,
    },
    "viewport": [
      "",
      "                                                                                                                        ",
      " read notes.txt                                                                                                         ",
      "                                                                                                                        ",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "width": 120,
}
`;
